# CrabSoinc

./: .gitignore
install/: local_setup.sh  setup.sh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.3.0
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
install/micro_ros_agent/share/micro_ros_agent/cmake/: micro_ros_agentConfig.cmake
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.sh  package.sh
install/micro_ros_setup/share/micro_ros_setup/: package.sh
install/robot/lib/robot/: algo_node
install/robot/share/ament_index/resource_index/parent_prefix_path/: robot
install/robot/share/robot/: package.sh
install/roverc/include/roverc/roverc/msg/: rgb.h  rgb.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  wheel_speed.h
install/roverc/share/roverc/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/roverc/share/roverc/cmake/: ament_cmake_export_include_directories-extras.cmake  export_roverc__rosidl_typesupport_fastrtps_cExport.cmake  export_roverc__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_roverc__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  rovercConfig.cmake  roverc__rosidl_typesupport_cExport-noconfig.cmake  roverc__rosidl_typesupport_cppExport-noconfig.cmake  roverc__rosidl_typesupport_introspection_cExport-noconfig.cmake  roverc__rosidl_typesupport_introspection_cExport.cmake
install/roverc/share/roverc/msg/: RGB.msg
log/: latest_build
src/robot/: CMakeLists.txt
src/robot/src/: algo_node.cpp  line_servoing_dual.cpp  line_servoing_front.cpp  map_servoing_differential.cpp  map_servoing_holonome.cpp  map_servoing_hybrid.cpp  motor_controller.cpp  tof_servoing.cpp  trajectory.cpp
src/roverc/: CMakeLists.txt
src/roverc/msg/: WheelSpeed.msg
(+23 files in other folders)
